Travis test deployment

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "npm run build:lib && npm run build:showcase",
     "build:lib": "npm run copy:readme && ng build ng-eventstore-listing --prod",
     "publish:lib": "cd dist/ng-eventstore-listing && npm publish && cd .. && cd ..",
-    "build:showcase": "ng build ng-eventstore-listing --base-href='https://saperium.github.io/ng-eventstore-listing/'",
-    "publish:demo": "npx angular-cli-ghpages --dir=./dist/ng-eventstore-listing",
+    "build:showcase": "ng build ng-eventstore-listing --base-href='https://saperiumrocks.github.io/ng-eventstore-listing/'",
+    "publish:demo": "npx angular-cli-ghpages --dir=./dist/ng-eventstore-listing-showcase",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
