--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ os:
 - linux
 addons:
   apt:
+    update: true
     sources:
     - google-chrome
     packages:
     - google-chrome-stable
 before_install:
-- apt-get update
 - export CHROME_BIN=chromium-browser
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
