--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: node_js
+
 node_js:
-- "8"
+- "11.6.0"
+
 dist: trusty
+
 sudo: required
 
 os:
@@ -12,6 +15,7 @@ addons:
     sources:
     - google-chrome
     packages:
+    - dpkg
     - google-chrome-stable
 before_install:
 - export CHROME_BIN=chromium-browser
