--- a/projects/ng-eventstore-listing/package.json
+++ b/projects/ng-eventstore-listing/package.json
@@ -6,7 +6,8 @@
     "@angular/core": "5.2.0",
     "immutable": "^4.0.0-rc.12",
     "lodash-es": "^4.17.15",
-    "rxjs": "^5.5.8"
+    "rxjs": "^5.5.8",
+    "rxjs-compat": "5.5.8"
   },
   "dependencies": {
     "tslib": "^1.10.0"
