--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bootstrap": "^4.5.0",
     "copyfiles": "^2.3.0",
     "immutable": "^4.0.0-rc.12",
+    "lodash-es": "^4.17.15",
     "rxjs": "~6.5.4",
     "rxjs-compat": "^6.5.5",
     "tslib": "^1.10.0",
