--- a/.travis.yml
+++ b/.travis.yml
@@ -31,5 +31,7 @@ jobs:
   - stage: build & publish lib
     script:
     - npm run build:lib
-    - npm run publish:lib
-    if: branch = master
+    deploy:
+      provider: npm
+      email: "saperium.rocks@gmail.com"
+      api_key: $NPM_TOKEN
