--- a/projects/ng-eventstore-listing/package.json
+++ b/projects/ng-eventstore-listing/package.json
@@ -7,7 +7,8 @@
     "immutable": "^4.0.0-rc.12",
     "lodash-es": "^4.17.15",
     "rxjs": "^5.5.8",
-    "rxjs-compat": "5.5.8"
+    "rxjs-compat": "5.5.8",
+    "socket.io-client": "^2.3.0"
   },
   "dependencies": {
     "tslib": "^1.10.0"
