--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "@angular/router": "~9.1.7",
     "bootstrap": "^4.5.0",
     "copyfiles": "^2.3.0",
+    "fs": "0.0.1-security",
     "immutable": "^4.0.0-rc.12",
     "lodash-es": "^4.17.15",
     "ngx-bootstrap": "^5.6.1",
+    "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "rxjs-compat": "^6.5.5",
     "tslib": "^1.10.0",
