--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  dbserver:
+  db_server:
     image: mysql:5.7
     ports:
       - '3306:3306'
@@ -11,3 +11,25 @@ services:
       - MYSQL_DATABASE=eventstore
       - MYSQL_USER=root
       - MYSQL_PASSWORD=root
+  redis_server:
+    image: redis
+    ports:
+      - '6379:6379'
+  api_server:
+    build: './projects/server-test'
+    volumes: 
+      - './projects/server-test:/app'
+    ports: 
+      - '3000:3000'
+    links: 
+      - 'db_server'
+      - 'redis_server'
+    environment: 
+      - REDIS_HOST=redis_server
+      - REDIS_PORT=6379
+      - EVENTSTORE_MYSQL_HOST=db_server
+      - EVENTSTORE_MYSQL_PORT=3306
+      - EVENTSTORE_MYSQL_USERNAME=root
+      - EVENTSTORE_MYSQL_PASSWORD=root
+      - EVENTSTORE_MYSQL_DATABASE=eventstore
+    command: bash start.sh redis_server:6379 db_server:3306
