--- a/projects/ng-eventstore-listing/package.json
+++ b/projects/ng-eventstore-listing/package.json
@@ -8,6 +8,7 @@
     "lodash-es": "^4.17.15",
     "rxjs": "^5.5.8",
     "rxjs-compat": "5.5.8",
+    "shortid": "^2.2.15",
     "socket.io-client": "^2.3.0"
   },
   "dependencies": {
