--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ jobs:
   - stage: test
     script:
     - npm run test:lib
-    # if: branch = publish
+    if: branch = publish
   - stage: build & publish showcase
     script:
     - npm install
@@ -31,7 +31,7 @@ jobs:
       skip_cleanup: true
       github_token: $GH_TOKEN
       local_dir: dist/ng-eventstore-listing-showcase
-    # if: branch = publish
+    if: branch = publish
   - stage: build & publish lib
     script:
     - npm run build:lib
@@ -39,3 +39,6 @@ jobs:
       provider: npm
       email: "saperium.rocks@gmail.com"
       api_key: $NPM_TOKEN
+      on:
+        branch: publish
+      skip_cleanup: true
