--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "cd lib && ng lint && cd ..",
     "e2e": "ng e2e",
-    "test:lib": "ng test --watch=false --sourceMap=false --browsers=ChromeHeadless",
+    "test:lib": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng test --app=lib",
     "build": "npm run build:lib && npm run build:showcase",
     "old:build:lib": "npm run copy:readme && ng build ng-eventstore-listing --prod",
     "build:lib": "ng-packagr -p lib/package.json",
@@ -44,15 +44,21 @@
     "@angular/compiler-cli": "5.2.0",
     "@angular/language-service": "5.2.0",
     "@types/node": "~6.0.60",
-    "@types/jasmine": "2.5.45",
+    "@types/jasmine": "2.8.7",
     "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
+    "jasmine": "^2.8.0",
+    "jasmine-core": "^2.8.0",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-safari-launcher": "^1.0.0",
+    "karma-spec-reporter": "0.0.31",
     "ng-packagr": "^2.4.2",
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
