--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,8 @@ jobs:
     script:
     - npm run build:lib
     before_deploy:
+      - cd lib
       - ls
-      - cd dist
     deploy:
       provider: npm
       email: "saperium.rocks@gmail.com"
@@ -45,7 +45,7 @@ jobs:
       on:
         branch: alpha
       skip_cleanup: true
-      local_dir: ng-eventstore-listing
+      local_dir: dist
     after_deploy:
       - cd ..
 
