--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "scripts": {
     "ng": "ng",
     "start": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng serve",
-    "test": "ng test",
+    "test": "npm run test:lib",
     "lint": "cd lib && ng lint && cd ..",
     "e2e": "ng e2e",
-    "test:lib": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng test --app=lib",
+    "test:lib": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng test -sm=false --watch=false --app=lib",
     "build": "npm run build:lib && npm run build:showcase",
-    "old:build:lib": "npm run copy:readme && ng build ng-eventstore-listing --prod",
     "build:lib": "ng-packagr -p lib/package.json",
     "publish:lib": "cd lib/dist && npm publish && cd .. && cd ..",
     "build:showcase": "ng build ng-eventstore-listing-showcase --base-href='https://saperiumrocks.github.io/ng-eventstore-listing/'",
