--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /dist-server
 /tmp
 /out-tsc
+dist/
+*.tgz
 
 # dependencies
 **/node_modules
@@ -41,3 +43,4 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
