Reverted gitignore changes

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "test": "npm run test:lib",
     "lint": "cd lib && ng lint && cd ..",
     "e2e": "ng e2e",
-    "test:lib": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng test -sm=false --watch=false --app=lib",
+    "test:lib": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng test --app=lib",
     "build": "npm run build:lib && npm run build:showcase",
     "build:lib": "ng-packagr -p lib/package.json",
-    "publish:lib": "cd lib/dist && npm publish && cd .. && cd ..",
+    "publish:lib:alpha": "cd lib/dist && npm publish --tag alpha && cd .. && cd ..",
     "build:showcase": "ng build ng-eventstore-listing-showcase --base-href='https://saperiumrocks.github.io/ng-eventstore-listing/'",
     "publish:demo": "npx angular-cli-ghpages --dir=./dist/ng-eventstore-listing-showcase",
     "test:showcase": "ng test ng-eventstore-listing-showcase --watch=false --sourceMap=false --browsers=ChromeHeadless",
@@ -32,7 +32,6 @@
     "copyfiles": "^2.3.0",
     "core-js": "^2.4.1",
     "jquery": "^3.5.1",
-    "ng-eventstore-listing": "file:lib/dist",
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
