--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "test": "npm run test:lib",
     "lint": "cd lib && ng lint && cd ..",
     "e2e": "ng e2e",
-    "test:lib": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng test --app=lib",
+    "test:lib": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng test --watch=false -sm=false --app=lib",
     "build": "npm run build:lib && npm run build:showcase",
     "build:lib": "ng-packagr -p lib/package.json",
     "publish:lib:alpha": "cd lib/dist && npm publish --tag alpha && cd .. && cd ..",
     "build:showcase": "ng build ng-eventstore-listing-showcase --base-href='https://saperiumrocks.github.io/ng-eventstore-listing/'",
     "publish:demo": "npx angular-cli-ghpages --dir=./dist/ng-eventstore-listing-showcase",
-    "test:showcase": "ng test ng-eventstore-listing-showcase --watch=false --sourceMap=false --browsers=ChromeHeadless",
+    "test:showcase": "ng test ng-eventstore-listing-showcase --watch=false -sm=false --browsers=ChromeHeadless",
     "copy:readme": "copyfiles ./README.md ./dist/ng-eventstore-listing"
   },
   "private": true,
