--- a/lib/package.json
+++ b/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-eventstore-listing",
-  "version": "0.1.15-alpha.14",
+  "version": "0.1.16-alpha.1",
   "contributors": [
     {
       "name": "Carlo Luis De Guzman",
@@ -16,8 +16,10 @@
     "socket.io-client": "2.3.0"
   },
   "dependencies": {
+    "file-saver": "^2.0.2",
     "immutable": "4.0.0-rc.12",
-    "lodash-es": "4.17.15"
+    "lodash-es": "4.17.15",
+    "moment-mini-ts": "^2.20.1"
   },
   "ngPackage": {
     "$schema": "./node_modules/ng-packagr/ng-package.schema.json",
@@ -27,7 +29,9 @@
     "dest": "dist",
     "whitelistedNonPeerDependencies": [
       "immutable",
-      "lodash-es"
+      "lodash-es",
+      "file-saver",
+      "moment-mini-ts"
     ]
   }
 }
