--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng serve",
     "test": "npm run test:lib",
     "lint": "cd lib && ng lint && cd ..",
+    "lint:fix": "cd lib && ng lint --fix && cd ..",
     "e2e": "ng e2e",
     "test:lib": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng test --watch=false -sm=false --app=lib",
     "test:lib:forever": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng test -sm=false --app=lib",
