--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "cd lib && ng lint --fix && cd ..",
     "e2e": "ng e2e",
     "test:lib": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng test --watch=false -sm=false --app=lib",
+    "test:2": "node node_modules/jasmine/bin/jasmine.js --config=jasmine.json",
     "test:lib:forever": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng test -sm=false --app=lib",
     "build": "npm run build:lib && npm run build:showcase",
     "build:lib": "ng-packagr -p lib/package.json",
