Fixed tests; Refactored ScriptStore

--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "lint": "cd lib && ng lint && cd ..",
     "lint:fix": "cd lib && ng lint --fix && cd ..",
     "e2e": "ng e2e",
-    "test:lib": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng test --watch=false -sm=false --app=lib",
-    "test:2": "node node_modules/jasmine/bin/jasmine.js --config=jasmine.json",
-    "test:lib:forever": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng test -sm=false --app=lib",
+    "test:lib": "node ./node_modules/@angular/cli/bin/ng test --watch=false -sm=false --app=lib",
+    "test:lib:forever": "node ./node_modules/@angular/cli/bin/ng test --app=lib",
     "build": "npm run build:lib && npm run build:showcase",
     "build:lib": "ng-packagr -p lib/package.json",
     "reinstall": "npm run build:lib && npm install",
