--- a/lib/package.json
+++ b/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-eventstore-listing",
-  "version": "0.1.16-alpha.34",
+  "version": "0.1.16-alpha.35",
   "contributors": [
     {
       "name": "Carlo Luis De Guzman",
@@ -18,6 +18,7 @@
   "dependencies": {
     "file-saver": "^2.0.2",
     "immutable": "4.0.0-rc.12",
+    "jquery": "^3.5.1",
     "lodash-es": "4.17.15",
     "moment-mini-ts": "^2.20.1"
   },
@@ -31,7 +32,8 @@
       "immutable",
       "lodash-es",
       "file-saver",
-      "moment-mini-ts"
+      "moment-mini-ts",
+      "jquery"
     ]
   }
 }
