Update angular version 5 to version 6

--- a/package.json
+++ b/package.json
@@ -10,43 +10,44 @@
     "lint": "cd lib && ng lint && cd ..",
     "lint:fix": "cd lib && ng lint --fix && cd ..",
     "e2e": "ng e2e",
-    "test:lib": "ng test --watch=false -sm=false --app=lib",
-    "test:lib:forever": "node ./node_modules/@angular/cli/bin/ng test --app=lib",
+    "test:lib": "ng test lib --watch=false",
+    "test:lib:forever": "node ./node_modules/@angular/cli/bin/ng test lib",
     "build": "npm run build:lib && npm run build:showcase",
     "build:lib": "ng-packagr -p lib/package.json",
     "reinstall": "npm run build:lib && npm install",
     "publish:lib:alpha": "cd lib/dist && npm publish --tag alpha && cd .. && cd ..",
-    "build:showcase": "ng build ng-eventstore-listing-showcase --base-href='https://saperiumrocks.github.io/ng-eventstore-listing/'",
+    "build:showcase": "ng build test --base-href='https://saperiumrocks.github.io/ng-eventstore-listing/'",
     "publish:demo": "npx angular-cli-ghpages --dir=./dist/ng-eventstore-listing-showcase",
     "test:showcase": "ng test ng-eventstore-listing-showcase --watch=false -sm=false --browsers=ChromeHeadless",
     "copy:readme": "copyfiles ./README.md ./dist/ng-eventstore-listing"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.2.0",
-    "@angular/common": "5.2.0",
-    "@angular/compiler": "5.2.0",
-    "@angular/core": "5.2.0",
-    "@angular/forms": "5.2.0",
-    "@angular/http": "5.2.0",
-    "@angular/platform-browser": "5.2.0",
-    "@angular/platform-browser-dynamic": "5.2.0",
-    "@angular/router": "5.2.0",
+    "@angular/animations": "6.1.10",
+    "@angular/common": "6.1.10",
+    "@angular/compiler": "6.1.10",
+    "@angular/core": "6.1.10",
+    "@angular/forms": "6.1.10",
+    "@angular/http": "6.1.10",
+    "@angular/platform-browser": "6.1.10",
+    "@angular/platform-browser-dynamic": "6.1.10",
+    "@angular/router": "6.1.10",
     "bootstrap": "^4.5.0",
     "copyfiles": "^2.3.0",
     "core-js": "^2.4.1",
     "jquery": "^3.5.1",
-    "ngx-bootstrap": "^5.6.1",
-    "rxjs": "^5.5.6",
+    "ngx-bootstrap": "^2.0.5",
+    "rxjs": "^6.6.7",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.8.0",
     "@angular-devkit/core": "0.0.29",
-    "@angular/cli": "1.6.0",
-    "@angular/compiler-cli": "5.2.0",
-    "@angular/language-service": "5.2.0",
-    "@types/node": "~6.0.60",
+    "@angular/cli": "^6.2.9",
+    "@angular/compiler-cli": "6.1.10",
+    "@angular/language-service": "6.1.10",
     "@types/jasmine": "2.8.7",
+    "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine": "^2.8.0",
     "jasmine-core": "^2.8.0",
