--- a/package.json
+++ b/package.json
@@ -23,31 +23,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.1.10",
-    "@angular/common": "6.1.10",
-    "@angular/compiler": "6.1.10",
-    "@angular/core": "6.1.10",
-    "@angular/forms": "6.1.10",
-    "@angular/http": "6.1.10",
-    "@angular/platform-browser": "6.1.10",
-    "@angular/platform-browser-dynamic": "6.1.10",
-    "@angular/router": "6.1.10",
+    "@angular/animations": "7.2.16",
+    "@angular/common": "7.2.16",
+    "@angular/compiler": "7.2.16",
+    "@angular/core": "7.2.16",
+    "@angular/forms": "7.2.16",
+    "@angular/http": "7.2.16",
+    "@angular/platform-browser": "7.2.16",
+    "@angular/platform-browser-dynamic": "7.2.16",
+    "@angular/router": "7.2.16",
     "bootstrap": "^4.5.0",
     "copyfiles": "^2.3.0",
     "core-js": "^2.4.1",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^2.0.5",
     "rxjs": "^6.6.7",
+    "tslib": "^1.9.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular-devkit/build-angular": "~0.13.0",
     "@angular-devkit/core": "0.0.29",
-    "@angular/cli": "^6.2.9",
-    "@angular/compiler-cli": "6.1.10",
-    "@angular/language-service": "6.1.10",
+    "@angular/cli": "^7.3.10",
+    "@angular/compiler-cli": "7.2.16",
+    "@angular/language-service": "7.2.16",
     "@types/jasmine": "2.8.7",
-    "@types/node": "~6.0.60",
+    "@types/node": "^10.17.60",
     "codelyzer": "^4.0.1",
     "jasmine": "^2.8.0",
     "jasmine-core": "^2.8.0",
@@ -63,10 +64,10 @@
     "karma-safari-launcher": "^1.0.0",
     "karma-spec-reporter": "0.0.31",
     "ng-eventstore-listing": "file:lib/dist",
-    "ng-packagr": "^2.4.2",
-    "protractor": "~5.1.2",
+    "ng-packagr": "^5.4.3",
+    "protractor": "^5.4.4",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "^2.4.2"
+    "typescript": "^3.2.4"
   }
 }
