--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.16",
-    "@angular/common": "7.2.16",
-    "@angular/compiler": "7.2.16",
-    "@angular/core": "7.2.16",
-    "@angular/forms": "7.2.16",
+    "@angular/animations": "8.2.14",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/forms": "8.2.14",
     "@angular/http": "7.2.16",
-    "@angular/platform-browser": "7.2.16",
-    "@angular/platform-browser-dynamic": "7.2.16",
-    "@angular/router": "7.2.16",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/router": "8.2.14",
     "bootstrap": "^4.5.0",
     "copyfiles": "^2.3.0",
     "core-js": "^2.4.1",
@@ -39,14 +39,14 @@
     "ngx-bootstrap": "^2.0.5",
     "rxjs": "^6.6.7",
     "tslib": "^1.9.0",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/build-angular": "~0.803.29",
     "@angular-devkit/core": "0.0.29",
-    "@angular/cli": "^7.3.10",
-    "@angular/compiler-cli": "7.2.16",
-    "@angular/language-service": "7.2.16",
+    "@angular/cli": "^8.3.29",
+    "@angular/compiler-cli": "8.2.14",
+    "@angular/language-service": "8.2.14",
     "@types/jasmine": "2.8.7",
     "@types/node": "^10.17.60",
     "codelyzer": "^4.0.1",
@@ -65,9 +65,10 @@
     "karma-spec-reporter": "0.0.31",
     "ng-eventstore-listing": "file:lib/dist",
     "ng-packagr": "^5.4.3",
+    "node-sass": "^6.0.1",
     "protractor": "^5.4.4",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "^3.2.4"
+    "typescript": "^3.4.5"
   }
 }
