--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@angular/language-service": "8.2.14",
     "@types/jasmine": "2.8.7",
     "@types/node": "^10.17.60",
-    "codelyzer": "^4.0.1",
+    "codelyzer": "^6.0.2",
     "jasmine": "^2.8.0",
     "jasmine-core": "^2.8.0",
     "jasmine-spec-reporter": "~4.1.0",
@@ -68,7 +68,7 @@
     "node-sass": "^6.0.1",
     "protractor": "^5.4.4",
     "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
+    "tslint": "^6.1.3",
     "typescript": "^3.4.5"
   }
 }
