--- a/package.json
+++ b/package.json
@@ -23,32 +23,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.14",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/forms": "8.2.14",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@angular/router": "8.2.14",
+    "@angular/animations": "9.1.13",
+    "@angular/common": "9.1.13",
+    "@angular/compiler": "9.1.13",
+    "@angular/core": "9.1.13",
+    "@angular/forms": "9.1.13",
+    "@angular/platform-browser": "9.1.13",
+    "@angular/platform-browser-dynamic": "9.1.13",
+    "@angular/router": "9.1.13",
     "bootstrap": "^4.5.0",
     "copyfiles": "^2.3.0",
     "core-js": "^2.4.1",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^2.0.5",
     "rxjs": "^6.6.7",
-    "tslib": "^1.9.0",
-    "zone.js": "^0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.29",
-    "@angular-devkit/core": "0.0.29",
-    "@angular/cli": "^8.3.29",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/language-service": "8.2.14",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular-devkit/core": "9.1.15",
+    "@angular/cli": "^9.1.15",
+    "@angular/compiler-cli": "9.1.13",
+    "@angular/language-service": "9.1.13",
     "@types/jasmine": "2.8.7",
-    "@types/node": "^10.17.60",
-    "codelyzer": "^6.0.2",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine": "^2.8.0",
     "jasmine-core": "^2.8.0",
     "jasmine-spec-reporter": "~4.1.0",
@@ -63,11 +63,11 @@
     "karma-safari-launcher": "^1.0.0",
     "karma-spec-reporter": "0.0.31",
     "ng-eventstore-listing": "file:lib/dist",
-    "ng-packagr": "^9.1.5",
+    "ng-packagr": "^9.0.0",
     "node-sass": "^6.0.1",
     "protractor": "^5.4.4",
     "ts-node": "~4.1.0",
     "tslint": "^6.1.3",
-    "typescript": "^3.4.5"
+    "typescript": "^3.8.3"
   }
 }
